--- a/first-sqs-stack/package.json
+++ b/first-sqs-stack/package.json
@@ -20,7 +20,9 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.940.0",
     "@aws-sdk/client-sqs": "^3.848.0",
+    "@aws-sdk/lib-dynamodb": "^3.940.0",
     "@types/aws-lambda": "^8.10.150",
     "aws-cdk-lib": "^2.206.0",
     "axios": "^1.10.0",
