--- a/first-sqs-stack/package.json
+++ b/first-sqs-stack/package.json
@@ -21,6 +21,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.940.0",
+    "@aws-sdk/client-eventbridge": "^3.940.0",
+    "@aws-sdk/client-sfn": "^3.940.0",
+    "@aws-sdk/client-sns": "^3.940.0",
     "@aws-sdk/client-sqs": "^3.848.0",
     "@aws-sdk/lib-dynamodb": "^3.940.0",
     "@types/aws-lambda": "^8.10.150",
