--- a/.gitignore
+++ b/.gitignore
@@ -34,76 +34,48 @@ Thumbs.db
 
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+.pnp/
+.pnp.js
 
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
+# Build outputs
+build/
+dist/
+cdk.out/
+-Functions/
 
-# Coverage directory used by tools like istanbul
-coverage/
-*.lcov
-
-# nyc test coverage
-.nyc_output
-
-# Grunt intermediate storage
-.grunt
-
-# Bower dependency directory
-bower_components
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variables file
+# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# parcel-bundler cache
-.cache
-.parcel-cache
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 
-# Next.js build output
-.next
-out
+# OS
+.DS_Store
+Thumbs.db
 
-# Nuxt.js build / generate output
-.nuxt
-dist
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+*.log
 
-# Gatsby files
+# Testing
+coverage/
+.nyc_output/
+
+# Misc
 .cache/
-public
-
-# Storybook build outputs
-.out
-.storybook-out
-
-# Temporary folders
-tmp/
-temp/
+*.pid
+*.seed
+*.pid.lock
 
 # ========================================
 # AWS CDK SPECIFIC
